add logs
