# app/Http/Controllers/Api/UsersController.php
@@ -2,24 +2,7 @@
 
 namespace App\Http\Controllers\Api;
 
-
-
 class UsersController extends ApiController
 {
-    /**
-     * @OA\Get(
-     * path="/api/users",
-     * summary="Get a list of users",
-     * tags={"Users"},
-     * @OA\Response(
-     * response=200,
-     * description="List of users",
-     * ),
-     * )
-     */
-    public function geUser()
-    {
-
-    }
 
 }
